--- a/package.json
+++ b/package.json
@@ -5,10 +5,27 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@angular/animations": "^18.0.0",
+    "@angular/build": "^18.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/platform-server": "^18.0.0",
+    "@angular/router": "^18.0.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.3"    
+  },
   "devDependencies": {
+    "@analogjs/vite-plugin-angular": "^1.7.3-beta.1",
+    "@angular/compiler-cli": "^18.0.0",    
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   }
